syntax = "proto3";
package msg.rsp;

import "Req.InputOrderAction.proto";
import "Rsp.Error.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "RspOrderActionMsgProto";

option csharp_namespace = "Evelynn.Base.Response";

message RspOrderActionMsg {
	.req.InputOrderActionField order_action = 1;
	.rsp.ErrorField error = 2;
	int32 request_id = 3;
	bool is_last = 4;
}