syntax = "proto3";
package msg.rsp;

import "Req.SettlementConfirm.proto";
import "Rsp.Error.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "RspSettlementConfirmMsgProto";

option csharp_namespace = "Evelynn.Base.Proto";

message RspSettlementConfirmMsg {
	.req.SettlementConfirmField confirm = 1;
	.rsp.ErrorField error = 2;
	int32 request_id = 3;
	bool is_last = 4;
}