syntax = "proto3";
package req;

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "UserLogoutFieldProto";

option csharp_namespace = "Evelynn.Base.Proto";

message UserLogoutField {
	string broker_id	= 1;
	string user_id = 2;
}