syntax = "proto3";
package rsp;

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "ErrorFieldProto";

option csharp_namespace = "Evelynn.Base.Response";

message ErrorField {
	int32 error_id = 1;
	string error_msg = 2;
}
